calico-enterprise_versioned_docs/version-3.14/reference/resources/networkpolicy.mdx
---
title: Network policy
description: API for this Calico Enterprise resource.
---

import Servicematch from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_servicematch.mdx';

import Serviceaccountmatch from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_serviceaccountmatch.mdx';

import Ports from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_ports.mdx';

import SelectorScopes from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_selector-scopes.mdx';

import Selectors from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_selectors.mdx';

import Entityrule from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_entityrule.mdx';

import Icmp from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_icmp.mdx';

import Rule from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_rule.mdx';

A network policy resource (`NetworkPolicy`) represents an ordered set of rules which are applied
to a collection of endpoints that match a [label selector](#selector).

`NetworkPolicy` is a namespaced resource. `NetworkPolicy` in a specific namespace
only applies to [workload endpoint resources](workloadendpoint.mdx)
in that namespace. Two resources are in the same namespace if the `namespace`
value is set the same on both.
See [global network policy resource](globalnetworkpolicy.mdx) for non-namespaced network policy.

`NetworkPolicy` resources can be used to define network connectivity rules between groups of {{prodname}} endpoints and host endpoints, and
take precedence over [profile resources](profile.mdx) if any are defined.

NetworkPolicies are organized into [tiers](tier.mdx), which provide an additional layer of ordering—in particular, note that the `Pass` action skips to the
next [tier](tier.mdx), to enable hierarchical security policy.

For `kubectl` [commands](https://kubernetes.io/docs/reference/kubectl/overview/), the following case-insensitive aliases
may be used to specify the resource type on the CLI:
`networkpolicy.projectcalico.org`, `networkpolicies.projectcalico.org` and abbreviations such as
`networkpolicy.p` and `networkpolicies.p`.

## Sample YAML

This sample policy allows TCP traffic from `frontend` endpoints to port 6379 on
`database` endpoints.

```yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: internal-access.allow-tcp-6379
  namespace: production
spec:
  tier: internal-access
  selector: role == 'database'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      metadata:
        annotations:
          from: frontend
          to: database
      protocol: TCP
      source:
        selector: role == 'frontend'
      destination:
        ports:
          - 6379
  egress:
    - action: Allow
```

## Definition

### Metadata

| Field     | Description                                                        | Accepted Values                                     | Schema | Default   |
| --------- | ------------------------------------------------------------------ | --------------------------------------------------- | ------ | --------- |
| name      | The name of the network policy. Required.                          | Alphanumeric string with optional `.`, `_`, or `-`. | string |           |
| namespace | Namespace provides an additional qualification to a resource name. |                                                     | string | "default" |

### Spec

| Field                  | Description                                                                                                                                                                                                                          | Accepted Values     | Schema                | Default                                       |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------- | --------------------- | --------------------------------------------- |
| order                  | Controls the order of precedence. {{prodname}} applies the policy with the lowest value first.                                                                                                                                       |                     | float                 |                                               |
| tier                   | Name of the [tier](tier.mdx) this policy belongs to.                                                                                                                                                                                 |                     | string                | `default`                                     |
| selector               | Selects the endpoints to which this policy applies.                                                                                                                                                                                  |                     | [selector](#selector) | all()                                         |
| types                  | Applies the policy based on the direction of the traffic. To apply the policy to inbound traffic, set to `Ingress`. To apply the policy to outbound traffic, set to `Egress`. To apply the policy to both, set to `Ingress, Egress`. | `Ingress`, `Egress` | List of strings       | Depends on presence of ingress/egress rules\* |
| ingress                | Ordered list of ingress rules applied by policy.                                                                                                                                                                                     |                     | List of [Rule](#rule) |                                               |
| egress                 | Ordered list of egress rules applied by this policy.                                                                                                                                                                                 |                     | List of [Rule](#rule) |                                               |
| serviceAccountSelector | Selects the service account(s) to which this policy applies. Select a specific service account by name using the `projectcalico.org/name` label.                                                                                     |                     | [selector](#selector) | all()                                         |

\* If `types` has no value, {{prodname}} defaults as follows.

> | Ingress Rules Present | Egress Rules Present | `Types` value     |
> | --------------------- | -------------------- | ----------------- |
> | No                    | No                   | `Ingress`         |
> | Yes                   | No                   | `Ingress`         |
> | No                    | Yes                  | `Egress`          |
> | Yes                   | Yes                  | `Ingress, Egress` |

### Rule

<Rule />

### ICMP

<Icmp />

### EntityRule

<Entityrule global='false' />

### Selector

<Selectors />
<SelectorScopes />

### Ports

<Ports />

### ServiceAccountMatch

<Serviceaccountmatch />

### ServiceMatch

<Servicematch />

## Supported operations

| Datastore type           | Create/Delete | Update | Get/List | Notes |
| ------------------------ | ------------- | ------ | -------- | ----- |
| Kubernetes API datastore | Yes           | Yes    | Yes      |
